# luwu

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  article.md  article.txt  config.example.toml  context.md  luwu-mythology-article.md  test-tool-write.txt  tool-test-result.txt  持续学习的价值.md  数字时代的深度思考.md  深度工作文章.md
.github/workflows/: ci.yml
crates/luwu-core/: Cargo.toml
crates/luwu-core/src/: cycle.rs  engine.rs  error.rs  event.rs  file_history.rs  lib.rs  llm.rs  memory_backend.rs  message.rs  session.rs  session_manager.rs  skill.rs  storage.rs  stuckness.rs  tool.rs  tool_registry.rs
crates/luwu-core/src/prompt/: mod.rs
crates/luwu-core/tests/: engine_integration.rs
crates/luwu-llm/: Cargo.toml
crates/luwu-llm/src/: anthropic.rs  error.rs  lib.rs  openai.rs  retry.rs  sse.rs
crates/luwu-memory/: Cargo.toml
crates/luwu-memory/src/: checkpoint.rs  consolidation.rs  correction.rs  deterministic.rs  history.rs  lib.rs  search_index.rs  store.rs  workers.rs
crates/luwu-server/: Cargo.toml  build.rs
crates/luwu-server/src/: api.rs  app.rs  config.rs  error.rs  lib.rs  main.rs  pid_file.rs  types.rs
crates/luwu-server/src/handlers/: agent.rs  chat.rs  health.rs  memory_ops.rs  mod.rs  rewind.rs  sessions.rs  skills.rs  stats.rs  tasks.rs  workers.rs
crates/luwu-server/src/services/: agent_service.rs  mod.rs
crates/luwu-server/tests/: handlers.rs
crates/luwu-tools/: Cargo.toml
crates/luwu-tools/src/: bash.rs  edit.rs  error.rs  grep.rs  hashline.rs  lib.rs  memory.rs  memory_search.rs  read.rs  todo.rs  web_fetch.rs  write.rs
docs/: api-reference.md  api.md  error-codes.md
docs/claude-code-analysis/: deep-dive-report.md  features.md
docs/context/: api.md  architecture.md  conventions.md  database.md  deploy.md  modules.md  tech-stack.md
docs/design/: memory-and-long-tasks.md  skills.md
docs/plantree/: README.md
docs/plantree/baseline/: README.md  risk-hotspots.md
docs/plantree/ideas/: inbox.md
docs/plantree/plans/agent-enhancement/: README.md
docs/plantree/plans/production-readiness/: README.md  open-questions.md  roadmap.md
docs/plantree/plans/production-readiness/decisions/: llmerror-per-provider.md  phase-ordering-errors-before-refactor.md  retry-hand-rolled.md  sqlite-spawn-blocking.md  storage-trait-removed.md
docs/plantree/plans/production-readiness/topics/: api-refactor.md  concurrency.md  error-handling.md  runtime-resilience.md
docs/plantree/plans/tui-deep-overhaul/: README.md
docs/plantree/plans/tui-mvp/: README.md
docs/review/: architecture.md  code-quality.md  network-resilience.md  runtime-health.md  summary-v2.md  summary.md
tests/: e2e_test.py  test_api.py  test_e2e.py  test_hashline.py  test_tools.py
ui/: package.json  tsconfig.json
ui/src/: App.tsx  client.ts  diff-log.ts  index.tsx  theme.ts  types.ts
ui/src/components/: AssistantMessage.tsx  CustomInput.tsx  DiffViewer.tsx  HelpOverlay.tsx  Markdown.tsx  MessageItem.tsx  MessageList.tsx  MessageResponse.tsx  ModelPicker.tsx  Overlay.tsx  PromptInput.tsx  ReasoningBlock.tsx  RewindOverlay.tsx  Select.tsx  SessionsOverlay.tsx  SkillsOverlay.tsx  Spinner.tsx  StatsOverlay.tsx  StatusBar.tsx  StatusLine.tsx  SuggestionList.tsx  SystemMessage.tsx  TaskList.tsx  ToolBadge.tsx  ToolResult.tsx  UserMessage.tsx  Welcome.tsx
ui/src/core/: clipboard.ts  constants.ts  highlight.tsx  state.ts  textOverflow.ts  toolUtils.ts  types.ts
ui/src/hooks/: useChatSession.ts  useCommands.ts  useConnection.ts  useHistory.ts  usePasteHandler.ts  useSuggestion.ts
ui/src/renderer/: ansi.ts  screen.ts
ui/src/services/: api.ts
ui/src/theme/: index.ts
ui/tests/: components-render.test.ts  components.test.ts  core.test.ts  hooks.test.ts  services.test.ts  sse-parsing.test.ts  textOverflow.test.ts  types.test.ts
