[package]
name = "luwu-core"
description = "Microkernel core for luwu agent — traits, types, and event bus"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
