[package]
name = "luwu-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
luwu-core = { path = "../luwu-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
