[package]
name = "luwu-server"
version.workspace = true
edition.workspace = true

[dependencies]
luwu-core = { path = "../luwu-core" }
luwu-llm = { path = "../luwu-llm" }
luwu-tools = { path = "../luwu-tools" }
luwu-memory = { path = "../luwu-memory" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }